--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
       architecture: 'x64'
       python.version: '3.10'
 -   script: |
-      python -m pip install -r requirements.txt && webdrivermanager chrome --linkpath AUTO
+      python -m pip install -r TestCases/requirements.txt && webdrivermanager chrome --linkpath AUTO
       displayName: 'Setup Robot Framework'
 -   task: PowerShell@2
     inputs:
